fix: diglog breaks the body width

--- a/src/style.less
+++ b/src/style.less
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100% !important;
+}
 // css暂时没有使用变量来设置数字值
 
 // 修改组件样式
